2004-10-18  Andrew Haley  <aph@redhat.com>

	PR java/18036:
	* gnu/gcj/runtime/natStackTrace.cc (fillInStackTrace): Reorganize
	and correct logic used to find interpreter.

2004-10-13  Andrew Haley  <aph@redhat.com>

	* interpret.cc (_Jv_InterpMethod::run): Initialize
	_Jv_StartOfInterpreter.
	(_Jv_StartOfInterpreter, _Jv_EndOfInterpreter): Functions removed.
	(_Jv_StartOfInterpreter, _Jv_EndOfInterpreter): New variables.
	* gnu/gcj/runtime/natStackTrace.cc (fillInStackTrace): Use
	_Unwind_FindEnclosingFunction to discover whether PC is within the
	interpreter.

2004-10-13  Tom Tromey  <tromey@redhat.com>

	* link.cc (find_iindex): Copy correct number of slots to new
	ioffsets.

2004-10-12  Tom Tromey  <tromey@redhat.com>

	* testsuite/libjava.loader/loader.exp (gcj_object_file_name): New
	proc.
	(gcj_loader_test_one): Use it.
	(gcj_loader_run): Likewise.

	* prims.cc: Don't include FirstThread.h.

2004-10-06  Tom Tromey  <tromey@redhat.com>

	* link.cc (ensure_method_table_complete): Ensure superclass
	Miranda methods installed.

2004-10-04  Loren J. Rittle  <ljrittle@acm.org>

	* configure.ac (*-*-freebsd[[1234]]*): Refine error message
	emission rule.
	* configure: Rebuilt.

2004-09-30  Tom Tromey  <tromey@redhat.com>

	* java/text/MessageFormat.java (Field): Constructor now
	protected.

2004-09-30  Tom Tromey  <tromey@redhat.com>

	* javax/crypto/MacSpi.java: Fixed typo.

2004-09-30  Michael Koch  <konqueror@gmx.de>

	* java/net/InetAddress.java: Reformatted.
	(loopback): Initialize with Inet4Address object.
	(static): Initialize ANY_IF with Inet4Address object.
	(InetAddress): Removed unused package-private constructor.

2004-09-30  Michael Koch  <konqueror@gmx.de>

	* java/beans/Beans.java,
	java/beans/EventHandler.java,
	java/beans/EventSetDescriptor.java,
	java/beans/Introspector.java,
	java/beans/PropertyEditorManager.java,
	java/beans/beancontext/BeanContext.java,
	java/beans/beancontext/BeanContextChild.java,